# ListTask

./: CMakeLists.txt  README.md  build_n_run_tests.sh
include/: Entity.hpp  SimilarityUtil.hpp  Solver.hpp
src/: SimilarityUtil.cpp  Solver.cpp
